fix: Fix title align

--- a/source/stylesheets/_components/_components.balloon.scss
+++ b/source/stylesheets/_components/_components.balloon.scss
@@ -26,6 +26,7 @@ _::-webkit-:not(:root:root), .c-#{$componentName} {
   margin-bottom: 0;
   margin-top: 0;
   font-weight: 100;
+  text-align: center;
 }
 
 
